# potion-lang

./: .gitignore  LICENSE  potion.cabal  potion.txt  potion2.txt  sample.potion
app/: Main.hs
examples/: add.p  array.potion  fact.potion  fib.potion  foreign.potion  fun.p  hello.potion  map.potion  param_polymorphic.potion  recur.potion  syntax.potion
src/Language/: Potion.hs
src/Language/Potion/: Codegen.hs  Core.hs  Expand.hs  Parser.hs  REPL.hs  Syntax.hs  Type.hs  Typing.hs
src/Language/Potion/Type/: Context.hs  Infer.hs  Substitution.hs
