name:                potion
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hzamani/potion-lang#readme
license:             BSD3
license-file:        LICENSE
author:              Hassan Zamani
maintainer:          hsn.zamani@gmain.com
copyright:           2017 Hassan Zamani
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Potion
                     , Language.Potion.Parser
                     , Language.Potion.REPL
                     , Language.Potion.Syntax
                     , Language.Potion.Core
                     , Language.Potion.Type
                     , Language.Potion.Type.Context
                     , Language.Potion.Type.Substitution
                     , Language.Potion.Type.Infer
                     , Language.Potion.Expand
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , mtl
                     , text
                     , haskeline
                     , repline
                     , containers
                     , either
                     , pretty
  default-language:    Haskell2010

executable potion
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , potion
                     , haskeline
                     , mtl
  default-language:    Haskell2010

test-suite potion-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , potion
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hzamani/potion-lang
